# Chip8-Emu

./: .gitignore  CMakeLists.txt  README.md  app.cc  app.h  chip8.cc  chip8.h  main.cc  shader_utils.cc  shader_utils.h
gui/: mainWindow.cc  mainWindow.h  mainWindow.ui  qdebugstream.cc  qdebugstream.h  ui_mainWindow.h
shaders/: frag.glsl  vertex.glsl
utils/: configReader.cc  configReader.h  simpleIni.h
